docroot/themes/humsci/humsci_basic/src/scss/tools/_mixins.links.scss
// Link style for headings
@mixin hb-link {
  // no font size by default
  color: var(--palette--black);
  font-weight: hb-theme-font-weight(semibold);
  text-decoration: underline;
  transition: hb-transition(text-decoration-color);
  text-decoration-color: var(--palette--gray-medium);

  &:hover,
  &:focus {
    color: var(--palette--black);
    text-decoration-color: var(--palette--primary);

    .hb-dark-pattern &,
    .hb-dark-inversion .views-element-container & {
      border-bottom-color: var(--palette--tertiary-highlight);
    }
  }
}

@mixin hb-heading-link-color {
  color: var(--palette--tertiary);

  &:hover,
  &:focus {
    color: var(--palette--tertiary-darken-20);
  }

  @include hb-themes(('colorful', 'airy')) {
    border-bottom-color: inherit;
  }

  @include hb-traditional {
    text-decoration-color: var(--palette--tertiary);
    transition: hb-transition(all); // set the color and text-decoration-color to transition together on hover

    &:hover,
    &:focus {
      text-decoration-color: var(--palette--tertiary-darken-20);
    }

    .hb-dark-inversion & {
      text-decoration-color: inherit;
    }
  }
}

// Link style for main content that is not a heading
// The default $icon-width is set for the width of external link icons
@mixin hb-link--inline {
  // no font size by default
  color: var(--palette--tertiary);

  @include hb-themes(('colorful', 'airy')) {
    // Ocean, canyon, mountain pairings within well-style and spotlight containers
    .hc-pairing-ocean .hb-well &,
    .hc-pairing-canyon .hb-well &,
    .hc-pairing-canyon .hs-paragraph-style--well &, 
    .hc-pairing-canyon .hs-paragraph-style--well-full-width &,
    .hc-pairing-canyon .hb-spotlight &,
    .hc-pairing-mountain .hb-well & {
      color: var(--palette--primary);

      &:hover,
      &:focus {
        color: var(--palette--primary-darken-20);
      }
    }
  }

  // Warbler color pairing override.
  @include hb-traditional {
    .ht-pairing-warbler & {
      color: var(--palette--secondary);

      &:hover,
      &:focus {
        color: var(--palette--tertiary);
      }
    }
  }

  // Base hover/focus (fallback if not matched by a specific pairing)
  &:hover,
  &:focus {
    color: var(--palette--tertiary-darken-20);
  }

  .hb-local-footer & {
    &:hover,
    &:focus {
      color: var(--palette--tertiary-darken-20);
    }
  }

  .hb-local-footer.hb-dark-pattern & {
    @include hb-colorful {
      color: var(--palette--white);
    }
  }

  .hb-dark-pattern &,
  .hb-dark-inversion .views-element-container & {
    @include hb-themes(('colorful', 'airy')) {
      color: var(--palette--tertiary-reversed);
      border-bottom-color: var(--palette--tertiary-reversed);
    }

    @include hb-traditional {
      color: var(--palette--tertiary-highlight);
    }

    &:hover,
    &:focus {
      @include hb-themes(('colorful', 'airy')) {
        @include hb-ext-icon-color('tertiary-highlight');

        color: var(--palette--tertiary-highlight);
        border-bottom-color: var(--palette--tertiary-highlight);
        box-shadow: none;
      }

      @include hb-traditional {
        @include hb-ext-icon-color('tertiary-highlight-darken-10');

        color: var(--palette--tertiary-highlight-darken-10);
        text-decoration-color: var(--palette--tertiary-highlight-darken-10);
      }
    }
  }
}

// More Link Styles
// For Traditional Theme, this is used on cards in combination with a long arrow
@mixin hb-more-link {
  font-size: hb-calculate-rems(18px);
  text-decoration: none;

  // Overrides button styles when used on a button
  border: none;
  background: none;
  padding: 0;
  color: var(--palette--secondary);

  @include hb-traditional {
    font-weight: hb-theme-font-weight(semibold);
    word-break: break-word;
  }

  @include hb-themes(('colorful', 'airy')) {
    font-weight: hb-theme-font-weight(bold);

    .hc-pairing-ocean & {
      color: var(--palette--secondary-darken-12);
    }
  }

  &::after {
    content: '';
    display: inline-block;
    @include hb-icon-link-arrow('secondary');
    margin-left: hb-calculate-rems(8px);
    background-size: 85%;
    transition: hb-transition(transform);
    will-change: contents;

    @include hb-themes(('colorful', 'airy')) {
      height: hb-calculate-rems(19px);
      width: hb-calculate-rems(19px);
      margin-bottom: hb-calculate-rems(-4px);

      .hc-pairing-ocean & {
        @include hb-icon-link-arrow('primary');
        background-size: 85%;
      }

      .hc-pairing-ocean .hb-well & {
        @include hb-icon-link-arrow('secondary-darken-12');
        background-size: 85%;
      }
    }

    @include hb-traditional {
      height: hb-calculate-rems(25px);
      width: hb-calculate-rems(25px);
      margin-bottom: hb-calculate-rems(-7px);
    };
  }

  &:hover,
  &:focus {
    color: var(--palette--secondary-darken-12);

    background-image: none;
    background-color: transparent;

    &::after {
      @include hb-icon-link-arrow('secondary-darken-12');
      background-size: 85%;
      transform: translateX(#{hb-calculate-rems(2.5px)});

      @include hb-colorful {
        .hc-pairing-ocean & {
          @include hb-icon-link-arrow('primary-dark');
          background-size: 85%;
        }
      }
    }

    @include hb-themes(('colorful', 'airy')) {
      .hc-pairing-ocean & {
        color: var(--palette--primary-dark);
      }
    }

    // Warbler color pairing override.
    @include hb-traditional {
      text-decoration: underline;

      .ht-pairing-warbler & {
        color: var(--palette--secondary-darken-12);
      }
    }
  }

  .hb-dark-pattern &,
  .hb-dark-inversion .views-element-container & {
    @include hb-themes(('colorful', 'airy')) {
      color: var(--palette--tertiary-reversed);

      &::after {
        @include hb-icon-link-arrow('tertiary-reversed');
        background-size: 85%;
      }

      &:hover,
      &:focus {
        color: var(--palette--secondary-highlight);

        .hc-pairing-ocean & {
          color: var(--palette--tertiary-highlight);
        }

        &::after {
          @include hb-icon-link-arrow('secondary-highlight');
          background-size: 85%;

          .hc-pairing-ocean & {
            @include hb-icon-link-arrow('tertiary-highlight');
            background-size: 85%;
          }
        }
      }
    }

    @include hb-traditional {
      color: var(--palette--tertiary-highlight);

      &::after {
        @include hb-icon-link-arrow('tertiary-highlight');
        background-size: 85%;
      }

      &:hover,
      &:focus {
        color: var(--palette--tertiary-highlight-darken-10);

        &::after {
          @include hb-icon-link-arrow('tertiary-highlight-darken-10');
          background-size: 85%;
        }
      }
    }
  }
}

// Arrow style link for Colorful Theme
// Used on cards
@mixin hb-card-arrow-link {
  display: block;
  color: transparent; // `hide` the text but make sure screen readers can still read it
  height: hb-calculate-rems(44px);
  text-decoration: none;
  background-image: none;
  width: 100%;

  .hb-dark-pattern &,
  .hb-dark-inversion .views-element-container & {
    color: transparent;

    &:hover,
    &:focus {
      color: transparent;
    }
  }

  &:hover,
  &:focus {
    color: transparent;
    cursor: pointer;

    &::before {
      transform: translateX(#{hb-calculate-rems(6.25px)});
      @include hb-icon-link-arrow('secondary-darken-12');

      .hb-dark-pattern &,
      .hb-dark-inversion .views-element-container & {
        @include hb-icon-link-arrow('gray-medium');
      }

      .hb-raised-cards .hb-dark-pattern &,
      .hb-dark-inversion .hb-raised-cards .views-element-container & {
        @include hb-icon-link-arrow('secondary-darken-12');
      }
    }
  }

  &::before {
    // postcard arrow
    content: '';
    position: absolute;
    left: 0;
    height: hb-calculate-rems(44px); // WCAG AAA target size
    width: hb-calculate-rems(44px);
    @include hb-icon-link-arrow('secondary');
    transform: translateX(0);
    transition: hb-transition(transform);
    will-change: contents;

    .hb-dark-pattern &,
    .hb-dark-inversion .views-element-container & {
      @include hb-icon-link-arrow('white');
    }

    .hb-raised-cards .hb-dark-pattern &,
    .hb-dark-inversion .hb-raised-cards .views-element-container & {
      @include hb-icon-link-arrow('secondary');
    }
  }
}

@mixin hb-icon-link-inline($icon) {
  @include hb-link--inline;
  color: var(--palette--secondary);

  &::before {
    /* stylelint-disable */
    font-family: 'Font Awesome 5 Free';
    /* stylelint-enable */
    font-weight: 900;
    -webkit-font-smoothing: antialiased;
    display: inline-block;
    font-style: normal;
    font-variant: normal;
    text-rendering: auto;
    margin-right: hb-calculate-rems(5px);

    @if $icon == 'pdf' {
      content: '\f1c1';
    } @else if $icon == 'file' {
      content: '\f15b';
    } @else {
      @error 'Invalid icon type. Use "pdf" or "file".';
    }
  }

  .hb-dark-pattern.hb-local-footer & {
    @include hb-colorful {
      color: var(--palette--white);
    }

    &:hover {
      @include hb-colorful {
        color: var(--palette--gray-medium);
      }
    }

    &::before {
      @include hb-colorful {
        color: var(--palette--white);
      }

      @include hb-traditional {
        color: var(--palette--tertiary-highlight);
      }
    }
  }

  .hb-dark-pattern &::before {
    color: var(--palette--secondary-highlight);
  }

  &:hover,
  &:focus {
    .hb-local-footer.hb-dark-pattern &::before {
      @include hb-colorful {
        color: var(--palette--gray-medium);
      }

      @include hb-traditional {
        color: var(--palette--tertiary-highlight-darken-10);
      }
    }
  }

}

